--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <style>
 #theworld
 {
-backgroun-color:red;
+background-color:red;
 }
 </style>
+<script src="phonegap.js"></script>
 </head>
 <body>
 	<h1>Hello</h1>
